--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "recharts": "^3.1.2",
+    "lucide-react": "^0.539.0",
+    "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
-    "react": "^19.1.1",
-    "lucide-react": "^0.539.0"
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5"
   }
 }
